fix alignment of toggle switch

--- a/src/style.css
+++ b/src/style.css
@@ -272,7 +272,12 @@ a:focus {
 
 .main-heading {
   font-size: var(--fontSize-7);
-  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.main-heading > label {
+  font-size: 1rem !important;
 }
 
 .post-list-item {
